--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <img src="./resources/images/logo.svg" alt="" />
-        <img class="box-ic" src="/bx-menu.svg" alt="">
+        <img class="box-ic" src="/images/bx-menu.svg" alt="">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
